<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:paddingTop="@dimen/list_padding_top"
     android:orientation="horizontal">

    <TextView
            android:id="@+id/nameTV"
            android:layout_width="@dimen/list_col_name_size"
            android:layout_height="wrap_content"
            android:text="@string/title_name"
            android:gravity="start"
			style="@style/ListItemTextViewStyle"/>
        <TextView
            android:id="@+id/startTimeTV"
            android:layout_width="@dimen/list_col_start_time_size"
            android:layout_height="wrap_content"
            android:text="@string/title_start_time"
			style="@style/ListItemTextViewStyle"/>
        <TextView
            android:id="@+id/endTimeTV"
            android:layout_width="@dimen/list_col_end_time_size"
            android:layout_height="wrap_content"
            android:text="@string/title_end_time"
			style="@style/ListItemTextViewStyle"/>
        <TextView
            android:id="@+id/channelTV"
            android:layout_width="@dimen/list_col_channel_size"
            android:layout_height="wrap_content"
            android:text="@string/title_channel"
			style="@style/ListItemTextViewStyle"/>
        <TextView
            android:id="@+id/ratingTV"
            android:layout_width="@dimen/list_col_rating_size"
            android:layout_height="wrap_content"
            android:text="@string/title_rating"
			style="@style/ListItemTextViewStyle"/>
 
</LinearLayout>